objects/NewObject__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomCaseNumber_c__c</fullName>
        <label>CustomCaseNumber__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomClosedDate_c__c</fullName>
        <label>CustomClosedDate__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FS_CustomCreatedBy_c__c</fullName>
        <label>FS_CustomCreatedBy__c</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_CustomCreatedDate_c__c</fullName>
        <label>FS_CustomCreatedDate__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FS_CustomLastModifiedBy_c__c</fullName>
        <label>FS_CustomLastModifiedBy__c</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_CustomLastModifiedDate_c__c</fullName>
        <label>FS_CustomLastModifiedDate__c</label>
        <type>Date</type>
    </fields>
    <label>NewObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>NewObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NewObjects</pluralLabel>
    <recordTypes>
        <fullName>newrecordtype1</fullName>
        <active>true</active>
        <label>newrecordtype1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>